added visible changes another log

--- a/Intro_to_git/index.html
+++ b/Intro_to_git/index.html
@@ -7,6 +7,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <h1>Introduction to Git/GitHub</h1>
+    <p> We're learning about git and github</p>
     
 </body>
 </html>
